--- a/abt class.html
+++ b/abt class.html
@@ -1,6 +1,6 @@
 <html>
 <head></head>
-<body bgcolor="#76d7c4"><img src="C:/Users/Pavithra/Documents/Pavus Website Workshop/code craft.jpg" width=200 height=200>
+<body bgcolor="#76d7c4"><img src="code craft.jpg" width=200 height=200>
 <center><a href="index.html"style="position:relative;top:20px;font-family:cursive;">Home</a>
 <a href="abt class.html"style="position:relative;top:20px;margin-left:150px; font-family:cursive;">About</a>
 <a href="contact info.html"style="position:relative;top:20px;margin-left:150px ;font-family:cursive;">Contact</a></center>
